BPER/DEVF/force-app/main/default/objects/Gruge__c/Gruge__c.object-meta.xml
<CustomObject>
    <label>Gruge</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Gruge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gruge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>