BPER/DEVF/force-app/main/default/objects/Gruge__c/fields/PTF_Code__c.field-meta.xml
<CustomField>
    <fullName>PTF_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>