BPER/DEVF/force-app/main/default/objects/Gruge__c/fields/PTF_CodiceMDS__c.field-meta.xml
<CustomField>
    <fullName>PTF_CodiceMDS__c</fullName>
    <formula>PTF_ServiceModel__r.PTF_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice MDS</label>
    <type>Text</type>
</CustomField>