BPER/DEVF/force-app/main/default/objects/Gruge__c/fields/PTF_ServiceModel__c.field-meta.xml
<CustomField>
    <fullName>PTF_ServiceModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modello di servizio</label>
    <referenceTo>ServiceModel__c</referenceTo>
    <relationshipLabel>Gruge</relationshipLabel>
    <relationshipName>Gruge</relationshipName>
    <type>Lookup</type>
</CustomField>